[package]
name = "hassel_asm"
version = "0.1.0"
authors = ["John DiSanti <johndisanti@gmail.com>"]

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
clap = "2.27"
derive-new = "0.5"
error-chain = "0.11"
lalrpop-util = "0.13.1"
regex = "0.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.hassel_lib6502]
path = "../hassel_lib6502"
