[package]
name = "hassel_asm"
version = "0.1.0"
authors = ["John DiSanti <johndisanti@gmail.com>"]
license = "MIT OR Apache-2.0"

[build-dependencies]
lalrpop = "0.14"

[dependencies]
clap = "2.31"
derive-new = "0.5"
error-chain = "0.11"
lalrpop-util = "0.14"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.hassel_lib6502]
path = "../hassel_lib6502"
